<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <EditText
            android:id="@+id/first_name_ef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_label"
            android:inputType="textPersonName|textCapWords"
            android:saveEnabled="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"/>

    <EditText
            android:id="@+id/second_name_ef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_name_label"
            android:inputType="textPersonName|textCapWords"
            android:saveEnabled="true"
            android:layout_below="@id/first_name_ef"
            android:layout_marginTop="8dp"/>

    <EditText
            android:id="@+id/email_ef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_label_text"
            android:inputType="textEmailAddress"
            android:saveEnabled="true"
            android:layout_below="@id/second_name_ef"
            android:layout_marginTop="8dp"/>

    <EditText
            android:id="@+id/password_ef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_ef"
            android:hint="@string/password_label_text"
            android:inputType="textPassword"
            android:saveEnabled="true"
            android:layout_marginTop="8dp"/>

    <EditText
            android:id="@+id/password_retype_ef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_ef"
            android:hint="@string/password_retype_label_text"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:saveEnabled="true"
            android:layout_marginTop="8dp"/>

    <Spinner
            android:id="@+id/customer_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_retype_ef"
            android:saveEnabled="true"
            android:layout_marginTop="8dp"/>

    <TextView
                android:id="@+id/terms_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:layout_below="@id/customer_sp"
                android:padding="10dp"
                android:text="@string/terms_checkbox_title"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                />

    <LinearLayout
            android:id="@+id/buttons_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/terms_tv"
            android:gravity="center_horizontal">

        <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_up_btn"
                android:layout_marginRight="12dp"/>
        <Button
                android:id="@+id/enter_code_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/enter_code_btn"/>
    </LinearLayout>

</RelativeLayout>